Application is completed

--- a/NalogRobot/NLog.config
+++ b/NalogRobot/NLog.config
@@ -6,15 +6,15 @@
       throwExceptions="false"
       internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 
-  <variable name="appName" value="TaxBot" />
+  <variable name="appName" value="NalogRobot" />
 
   <targets async="true">
     <target xsi:type="File"
             name="default"
             layout="${longdate} - ${level:uppercase=true}: ${message}${onexception:${newline}EXCEPTION\: ${exception:format=ToString}}"
-            fileName="${specialfolder:ApplicationData}\${appName}\Debug.log"
+            fileName="${appName}.txt"
             keepFileOpen="false"
-            archiveFileName="${specialfolder:ApplicationData}\${appName}\Debug_${shortdate}.{##}.log"
+            archiveFileName="${appName}\Archive${shortdate}.{##}.log"
             archiveNumbering="Sequence"
             archiveEvery="Day"
             maxArchiveFiles="30"
