Data access added

--- a/NalogRobot/App.config
+++ b/NalogRobot/App.config
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
+  <connectionStrings>
+    <add name="Sqlite" connectionString="Data Source=|DataDirectory|sqlite.db;version=3;new=False;datetimeformat=CurrentCulture;" providerName="System.Data.SqlLite" />
+  </connectionStrings>
+  <appSettings>
+    <add key="SomeKey" value="SomeValue" />
+  </appSettings>
+  <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
     </startup>
 </configuration>
