--- a/NalogRobot/packages.config
+++ b/NalogRobot/packages.config
@@ -3,4 +3,5 @@
   <package id="NLog" version="4.7.4" targetFramework="net46" />
   <package id="NLog.Config" version="4.7.4" targetFramework="net46" />
   <package id="NLog.Schema" version="4.7.4" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.103" targetFramework="net46" />
 </packages>
