--- a/NalogRobot/NalogRobot.csproj
+++ b/NalogRobot/NalogRobot.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Tax.cs" />
-    <Compile Include="Shell.cs">
+    <Compile Include="Win32Api.cs">
       <SubType>Form</SubType>
     </Compile>
     <None Include="NalogRobot.ini">
